# pl-analyzer

./: .gitignore  index.html  jsconfig.json  latest.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: tauri-release.yml
public/: splashscreen.html
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: _theme.scss  styles.scss  tailwind.css
src/assets/layout/: _core.scss  _header.scss  _responsive.scss  _typography.scss  _utils.scss  layout.scss
src/assets/layout/variables/: _dark.scss  _light.scss
src/components/: LoadingOverlay.vue  Table.vue
src/components/analysis/: Accordion.vue  AnalysisAccordion.vue  ChartsPanel.vue  ColumnsToggler.vue  ComparisonPanel.vue  DataPanel.vue
src/components/breakdown/: AveragePricePanel.vue  ChartsTab.vue  DataTab.vue  PricePanel.vue  WeightPanel.vue
src/components/charts/: Doughnut.vue  Line.vue
src/components/dialogs/add/: AddDialog.vue  AddDialogFooter.vue
src/components/dialogs/import/: ImportDialog.vue  ImportDialogFooter.vue
src/layout/: AppBreadcrumb.vue  AppFooter.vue  AppHeader.vue  AppLayout.vue  AppNav.vue
src/layout/composables/: layout.js
src/router/: index.js
src/service/: AnalysisService.js  CashFlowService.js  ItemService.js  TransactionService.js  database.js  utils.js
src/stores/: appstate.js
src/utils/: exports.js  text.js  updater.js
src/views/: Analysis.vue  CashFlow.vue  Home.vue
src/views/analysis/: Overview.vue  Transactions.vue
src/views/manage/: Categories.vue  ItemCategories.vue
src/views/manage/items/: Purchases.vue  Sales.vue
src/views/transactions/: Purchases.vue  Sales.vue
